Updates to make this fly a bit more

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(CMAKE_BUILD_TOOL MATCHES "make")
   ENDIF(NOT CMAKE_C_FLAGS MATCHES "-Wall")
 ENDIF(CMAKE_BUILD_TOOL MATCHES "make")
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
 ADD_DEFINITIONS(-D_FILE_OFFSET_BITS=64)
 
 set(Boost_USE_STATIC_LIBS        ON)
@@ -60,13 +60,17 @@ endif()
 INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
 
 # Generate Protocol-buffer sources
-SET(PROTOBUF_REQUIRE_CPP TRUE)
-FIND_PACKAGE(ProtocolBuffers REQUIRED)
-INCLUDE_DIRECTORIES (${PROTOC_OUT_DIR}) # For generated protobuf headers.
+FIND_PACKAGE(Protobuf REQUIRED)
+INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 
 # Setup the logging package
 FIND_PACKAGE(Log4cplus REQUIRED)
-INCLUDE_DIRECTORIES(${LOG4CLPUS_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${LOG4CPLUS_INCLUDE_DIRS})
+
+# Setup the crypto++ package
+FIND_PACKAGE(cryptopp REQUIRED)
+INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIRS})
+
 
 FIND_PACKAGE(PkgConfig REQUIRED)
 
