--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,10 +1,9 @@
 
-IF(${PROTOBUF_FOUND})
-	WRAP_PROTO_CPP(BITHORDE_PROTO ${CMAKE_SOURCE_DIR}/bithorde.proto)
-ENDIF(${PROTOBUF_FOUND})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${CMAKE_SOURCE_DIR}/bithorde.proto)
 
 ADD_LIBRARY(bithorde
-	${BITHORDE_PROTO}
+	${PROTO_HDRS} ${PROTO_SRCS}
 	allocator.h
 	asset.h asset.cpp
 	bithorde.h
@@ -18,7 +17,7 @@ ADD_LIBRARY(bithorde
 )
 
 TARGET_LINK_LIBRARIES(bithorde
-	${PROTOBUF_LIBRARY}
+	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 
 	pthread
