--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,11 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 FIND_PACKAGE(Log4cplus REQUIRED)
 INCLUDE_DIRECTORIES(${LOG4CPLUS_INCLUDE_DIRS})
 
+# Setup the logging package
+FIND_PACKAGE(CryptoPP REQUIRED)
+INCLUDE_DIRECTORIES(${CRYPTOPP_INCLUDE_DIRS})
+
+
 FIND_PACKAGE(PkgConfig REQUIRED)
 
 ADD_SUBDIRECTORY(lib)
